Fixing bugs and spacing

--- a/styles.css
+++ b/styles.css
@@ -32,22 +32,19 @@ a:hover {
 
 .content {
   width: 75%;
-  max-width: 600px;
-  margin: 20px;
-  margin-top: 40px;
-  margin-bottom: 10px;
-  margin-left: 200px;
-  float: left;
+  max-width: 650px;
+  margin: 30px;
   font-size: 16px;
   font-family: "PT Serif", serif;
   font-weight: 300;
   font-style: normal;
   color: #322d2e;
+  line-height: 1.5
 }
 
 .content mark {
   background: #d8d8d8;
-  padding: 1px 3px;
+  padding: 0.3px;
   border-radius: 3px;
 }
 
@@ -66,16 +63,14 @@ a:hover {
 
 #menu {
   margin: 30px;
-  margin-top: 40px;
-  margin-right: 60px;
   width: 200px;
-  float: right;
   font-size: 16 px;
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   list-style-type: none;
   list-style: none; 
+  line-height: 1.3;
 }
 
 .skilful-logomark {
@@ -94,19 +89,3 @@ a:hover {
   background-color: #322d2e;
   color: #ffffff;
 } 
-
-
-@media (max-width: 1250px) { /*choose the width you prefer*/
-  #menu {
-    float: right;
-    margin-top: 20px;
-    margin-left: 30px;
-  }
-
-  .content {
-    max-width: 600px;
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-}
